Refactor fixture, match event, and result APIs
Redesigned controllers for fixtures, match events, and results with improved REST endpoints and OpenAPI annotations. Added ResourceNotFoundException for error handling. Enhanced fixture generation logic to support round robin and knockout modes, filtering only approved teams and assigning compatible times. Updated DTOs and entities to include timestamps. Improved mappers and services for match events and results, including new endpoints for listing by player and updating results. Repository interfaces now support more flexible queries.